--- a/SubSite/subsite.html
+++ b/SubSite/subsite.html
@@ -8,6 +8,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <script src="xxtea.min.js" type="text/javascript"></script>
         <script src="customselect.js" type="text/javascript"></script>
         <script src="script.js"></script>
         <link rel="stylesheet" href="style.css">
@@ -29,8 +30,24 @@
                 </div>
             </div>
             <div class="settingsp">
-                <p class="s_text">Settings</p>
+                <p class="s_text">Extra Settings that dont affect the encrypt and decrypt</p>
                 <div class="all_settings">
+                    <div class="autores">
+                        <label for="autores_var" >Auto Resize</label>
+                        <label class="switch">
+                            <input type="checkbox" id="autores_t" onchange="settingChanged(this)" checked>
+                            <span class="toggle"></span>
+                        </label>
+                        <span data-text="Automatically resizes some textfields based on how much space is needed" class="tooltip">?</span>
+                    </div>
+                    <div class="lengthc">
+                        <label for="lengthc_var" >Length Calculation</label>
+                        <label class="switch">
+                            <input type="checkbox" id="lengthc_t" onchange="settingChanged(this)" checked>
+                            <span class="toggle"></span>
+                        </label>
+                        <span data-text="Calculates how long the text is in some text fields" class="tooltip">?</span>
+                    </div>
                     <div class="msgdura">
                         <label for="msgdura_var" >Info Box Duration</label>
                         <input type="number" min="0" max="100" value="6" id="msgdura_v" placeholder="Cannot be Empty" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)" oninput="this.value = !!this.value && Math.abs(this.value) >= 0  && Math.abs(this.value) <= 100 ? Math.abs(this.value) : null">
@@ -69,7 +86,7 @@
                             <label for="stylesel_vartwo" >Emergency Button Toggle</label>
                             <label class="switch">
                                 <input type="checkbox" id="stylesel_t" onchange="settingChanged(this)" checked>
-                                <span class="switch"></span>
+                                <span class="toggle"></span>
                             </label>
                             <span data-text="Toggle to hide / show the emergency button to reset the theme in case you make the site unuseable with some color combinations" class="tooltip">?</span>
                         </div>
@@ -179,10 +196,21 @@
                             </table>
                         </div>
                     </div>
+                    <div class="shares">
+                        <textarea readonly="readonly" id="shares_text" name="shares_text" rows="6" cols="150"></textarea>
+                        <label id="shares_l" class="length_txt newline" for="DecoyMsg"></label>
+                        <div>
+                            <label for="shares_var" >Share Settings</label>
+                            <button type="button" id="shares_b" onclick="settingChanged(this)">Share</button>
+                            <span data-text="Generate a link so you can easly share this page with the exact settings you have" class="tooltip">?</span>
+                            <button type="button" id="copy_shares" onclick="copytext('shares_text')" disabled>Copy</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <button type="button" id="emergency_sr" onclick="changetheme('reset');">Reset Theme</button>
+        <textarea readonly="readonly" id="uid_storage" name="uid_storage" rows="1" cols="10"></textarea>
         <!-- The Modal/popup info box -->
         <div class="infobox_container">
             <!-- Here is the hidden checkbox element which makes toggling the modal work -->
