--- a/SubSite/subsite.html
+++ b/SubSite/subsite.html
@@ -3,6 +3,11 @@
 <html>
     <head>
         <title>Darko s SubSite</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
         <script src="xxtea.min.js" type="text/javascript"></script>
         <script src="customselect.js" type="text/javascript"></script>
         <script src="script.js"></script>
@@ -30,7 +35,7 @@
                     <div class="autores">
                         <label for="autores_var" >Auto Resize</label>
                         <label class="switch">
-                            <input type="checkbox" id="autores_t" onchange="settingChanged(this)" checked>
+                            <input type="checkbox" id="autores_t" data-defvalue=true onchange="settingChanged(this)" checked>
                             <span class="toggle"></span>
                         </label>
                         <span data-text="Automatically resizes some textfields based on how much space is needed" class="tooltip">?</span>
@@ -38,14 +43,14 @@
                     <div class="lengthc">
                         <label for="lengthc_var" >Length Calculation</label>
                         <label class="switch">
-                            <input type="checkbox" id="lengthc_t" onchange="settingChanged(this)" checked>
+                            <input type="checkbox" id="lengthc_t" data-defvalue=true onchange="settingChanged(this)" checked>
                             <span class="toggle"></span>
                         </label>
                         <span data-text="Calculates how long the text is in some text fields" class="tooltip">?</span>
                     </div>
                     <div class="msgdura">
                         <label for="msgdura_var" >Info Box Duration</label>
-                        <input type="number" min="0" max="100" value="6" id="msgdura_v" placeholder="Cannot be Empty" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)" oninput="this.value = !!this.value && Math.abs(this.value) >= 0  && Math.abs(this.value) <= 100 ? Math.abs(this.value) : null">
+                        <input type="number" min="0" max="100" value="6" data-defvalue="6" id="msgdura_v" placeholder="Cannot be Empty" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)" oninput="this.value = !!this.value && Math.abs(this.value) >= 0  && Math.abs(this.value) <= 100 ? Math.abs(this.value) : null">
                         <span data-text="Controls default info box duration in seconds, set this to 0 to have infinite duration with manual dismissal" class="tooltip">?</span>
                         <button type="button" id="msgdura_b" onclick="showmsg('This is a test message','Example text','With your set duration');">Test</button>
                     </div>
@@ -53,24 +58,24 @@
                         <label for="huer_var" >Color/Hue Rotation</label>
                         <div>
                             <label for="huer_varman" >Manual</label>
-                            <input type="range" min="0" max="360" value="0" class="slider" id="huer_s" oninput="settingChanged(this)">
+                            <input type="range" min="0" max="360" value="0" data-defvalue="0" class="slider" id="huer_s" oninput="settingChanged(this)">
                             <input type="number" min="0" max="360" value="0" id="huer_v" placeholder="" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)" oninput="this.value = !!this.value && Math.abs(this.value) >= 0  && Math.abs(this.value) <= 360 ? Math.abs(this.value) : null">
                             <span data-text="Allows you to easly change color of the site" class="tooltip">?</span>
                         </div>
                         <div>
                             <label for="huer_varauto" >Auto</label>
                             <label class="switch">
-                                <input type="checkbox" id="huer_t" onchange="settingChanged(this)">
+                                <input type="checkbox" id="huer_t" data-defvalue=false onchange="settingChanged(this)">
                                 <span class="toggle"></span>
                             </label>
-                            <input type="number" min="1" max="6000" value="100" id="huer_vi" placeholder="" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)" oninput="this.value = !!this.value && Math.abs(this.value) >= 1  && Math.abs(this.value) <= 6000 ? Math.abs(this.value) : null">
+                            <input type="number" min="1" max="6000" value="100" data-defvalue="100" id="huer_vi" placeholder="" onfocus="this.oldvalue = this.value;" onchange="settingChanged(this)" oninput="this.value = !!this.value && Math.abs(this.value) >= 1  && Math.abs(this.value) <= 6000 ? Math.abs(this.value) : null">
                             <span data-text="Set a interval(MiliSeconds) for automated color changing" class="tooltip">?</span>
                         </div>
                     </div>
                     <div class="stylesel">
                         <label for="stylesel_var" >Theme</label>
                         <div class="custom-select" style="width:200px;">
-                            <select id="stylesel-db">
+                            <select id="stylesel-db" data-defvalue="0">
                                 <option value="lg">Light Green</option>
                                 <option value="lg">Light Green</option>
                                 <option value="dg">Dark Green</option>
@@ -80,7 +85,7 @@
                         <div class="stylesel_emergency_toggle">
                             <label for="stylesel_vartwo" >Emergency Button Toggle</label>
                             <label class="switch">
-                                <input type="checkbox" id="stylesel_t" onchange="settingChanged(this)" checked>
+                                <input type="checkbox" id="stylesel_t" data-defvalue=true onchange="settingChanged(this)" checked>
                                 <span class="toggle"></span>
                             </label>
                             <span data-text="Toggle to hide / show the emergency button to reset the theme in case you make the site unuseable with some color combinations" class="tooltip">?</span>
